<resources>
    <string name="app_name">WeatherForcast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="rain">Rain</string>
    <string name="notifications">Notifications</string>
    <string name="location">Location</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="language">Language</string>
    <string name="time">time</string>
    <string name="alert_type">Alert type</string>
    <string name="time_in">In</string>
    <string name="alarm_alert">Alarm Alert!</string>
    <string name="click_to_see_weather_today">Open The App to See Weather Today</string>
    <string name="dismiss">Dismiss</string>
    <string name="search">Search</string>
    <string name="clouds">Clouds</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="_24_hour_forecast">24-hour forecast</string>
    <string name="_5_days_forecast">5-days forecast</string>
    <string name="discover_new_places_and_add_them_to_favourite">Discover new places and add them to favourite</string>
    <string name="add_your_alert_to_up_to_date_with_weather_state">Add your alert to up to date with weather state</string>
    <string name="map">Map</string>


    <array name="location">
        <item></item>
        <item>Gps</item>
        <item></item>
        <item>Map</item>
        <item></item>
    </array>

    <array name="temperature_unit">
        <item></item>
        <item>Kelvin</item>
        <item></item>
        <item>Celsius</item>
        <item></item>
        <item>Fahrenheit</item>
        <item></item>
    </array>

    <array name="wind_speed">
        <item></item>
        <item>km/h</item>
        <item></item>
        <item>m/s</item>
        <item></item>
    </array>

    <array name="language_arr">
        <item></item>
        <item>English</item>
        <item></item>
        <item>Arabic</item>
        <item></item>
    </array>

</resources>